// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MapPage /> Snapshot renders the empty state 1`] = `
<DocumentFragment>
  <div
    aria-label="Search Map Page"
    class="m-map-page inherit-box border-box"
  >
    <div
      aria-label="Map Search Panel"
      class="m-map-page__input-and-results visible"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-map-page__input"
      >
        <form
          aria-label="Search Map"
          class="m-search-form"
        >
          <div
            class="m-search-form__row"
          >
            <div
              class="m-search-form__text"
            >
              <input
                aria-label="Search Map Query"
                class="m-search-form__input"
                placeholder="Search"
                type="text"
                value=""
              />
              <button
                class="m-search-form__clear"
                title="Clear Search"
                type="reset"
              >
                <span>
                  <svg />
                </span>
              </button>
            </div>
            <button
              class="m-search-form__submit button-submit"
              disabled=""
              title="Submit"
              type="submit"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-search-form__row"
          >
            <ul
              class="m-search-form__property-buttons"
            >
              <li
                class="m-search-form__property-button"
              >
                <input
                  checked=""
                  class="m-search-form__property-input"
                  id="property-all"
                  name="property"
                  type="radio"
                  value="all"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-all"
                >
                  all
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-run"
                  name="property"
                  type="radio"
                  value="run"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-run"
                >
                  run
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-vehicle"
                  name="property"
                  type="radio"
                  value="vehicle"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-vehicle"
                >
                  vehicle
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-operator"
                  name="property"
                  type="radio"
                  value="operator"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-operator"
                >
                  operator
                </label>
              </li>
            </ul>
          </div>
        </form>
      </div>
      <hr />
      <div
        class="m-search-display"
      >
        <div
          class="m-recent-searches"
        >
          <div
            class="m-recent-searches__heading"
          >
            Recent Searches
          </div>
          <ul />
        </div>
      </div>
    </div>
    <div
      class="m-map-page__map"
    >
      <div
        class="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        class="m-vehicle-map leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="id-vehicle-map"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="/13/2479/3029.png"
                  style="width: 256px; height: 256px; left: -4px; top: -239px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-pane leaflet-primaryVehicles-pane"
              style="z-index: 499;"
            />
            <div
              class="leaflet-pane leaflet-secondaryVehicles-pane"
              style="z-index: 400;"
            />
            <div
              class="leaflet-pane leaflet-notableLocationMarkers-pane"
              style="z-index: 410;"
            />
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          />
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-bar leaflet-control"
            >
              <a
                aria-label="Full Screen"
                class="leaflet-control-zoom-fullscreen fullscreen-icon"
                href="#"
                role="button"
                title="Full Screen"
              />
            </div>
            <div
              class="leaflet-control leaflet-bar m-vehicle-map__recenter-button"
            >
              
		
              <a
                aria-label="Recenter Map"
                href="#"
                role="button"
                title="Recenter Map"
              >
                
		    
                <svg
                  height="26"
                  viewBox="-5 -5 32 32"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
			
                  <path
                    d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                    transform="rotate(60, 12, 12)"
                  />
                  
		    
                </svg>
                
		
              </a>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              © 
              <a
                href="http://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
          <div
            class="leaflet-control leaflet-bar m-vehicle-map__street-view-control lc-street-view-switch"
          >
            <label
              class="lc-street-view-switch__label"
              for="street-view-toggle-:r1:"
            >
              <span
                class="lc-street-view-switch__label-icon"
              >
                <svg />
              </span>
            </label>
            <label
              class="lc-street-view-switch__label lc-street-view-switch__label-text"
              for="street-view-toggle-:r1:"
            >
              Street View
            </label>
            <div
              class="form-check form-switch lc-street-view-switch__input"
            >
              <input
                class="form-check-input"
                id="street-view-toggle-:r1:"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MapPage /> Snapshot renders the null state 1`] = `
<DocumentFragment>
  <div
    aria-label="Search Map Page"
    class="m-map-page inherit-box border-box"
  >
    <div
      aria-label="Map Search Panel"
      class="m-map-page__input-and-results visible"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-map-page__input"
      >
        <form
          aria-label="Search Map"
          class="m-search-form"
        >
          <div
            class="m-search-form__row"
          >
            <div
              class="m-search-form__text"
            >
              <input
                aria-label="Search Map Query"
                class="m-search-form__input"
                placeholder="Search"
                type="text"
                value=""
              />
              <button
                class="m-search-form__clear"
                title="Clear Search"
                type="reset"
              >
                <span>
                  <svg />
                </span>
              </button>
            </div>
            <button
              class="m-search-form__submit button-submit"
              disabled=""
              title="Submit"
              type="submit"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-search-form__row"
          >
            <ul
              class="m-search-form__property-buttons"
            >
              <li
                class="m-search-form__property-button"
              >
                <input
                  checked=""
                  class="m-search-form__property-input"
                  id="property-all"
                  name="property"
                  type="radio"
                  value="all"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-all"
                >
                  all
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-run"
                  name="property"
                  type="radio"
                  value="run"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-run"
                >
                  run
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-vehicle"
                  name="property"
                  type="radio"
                  value="vehicle"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-vehicle"
                >
                  vehicle
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-operator"
                  name="property"
                  type="radio"
                  value="operator"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-operator"
                >
                  operator
                </label>
              </li>
            </ul>
          </div>
        </form>
      </div>
      <hr />
      <div
        class="m-search-display"
      >
        <div
          class="m-recent-searches"
        >
          <div
            class="m-recent-searches__heading"
          >
            Recent Searches
          </div>
          <ul />
        </div>
      </div>
    </div>
    <div
      class="m-map-page__map"
    >
      <div
        class="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        class="m-vehicle-map leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="id-vehicle-map"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="/13/2479/3029.png"
                  style="width: 256px; height: 256px; left: -4px; top: -239px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-pane leaflet-primaryVehicles-pane"
              style="z-index: 499;"
            />
            <div
              class="leaflet-pane leaflet-secondaryVehicles-pane"
              style="z-index: 400;"
            />
            <div
              class="leaflet-pane leaflet-notableLocationMarkers-pane"
              style="z-index: 410;"
            />
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          />
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-bar leaflet-control"
            >
              <a
                aria-label="Full Screen"
                class="leaflet-control-zoom-fullscreen fullscreen-icon"
                href="#"
                role="button"
                title="Full Screen"
              />
            </div>
            <div
              class="leaflet-control leaflet-bar m-vehicle-map__recenter-button"
            >
              
		
              <a
                aria-label="Recenter Map"
                href="#"
                role="button"
                title="Recenter Map"
              >
                
		    
                <svg
                  height="26"
                  viewBox="-5 -5 32 32"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
			
                  <path
                    d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                    transform="rotate(60, 12, 12)"
                  />
                  
		    
                </svg>
                
		
              </a>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              © 
              <a
                href="http://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
          <div
            class="leaflet-control leaflet-bar m-vehicle-map__street-view-control lc-street-view-switch"
          >
            <label
              class="lc-street-view-switch__label"
              for="street-view-toggle-:r0:"
            >
              <span
                class="lc-street-view-switch__label-icon"
              >
                <svg />
              </span>
            </label>
            <label
              class="lc-street-view-switch__label lc-street-view-switch__label-text"
              for="street-view-toggle-:r0:"
            >
              Street View
            </label>
            <div
              class="form-check form-switch lc-street-view-switch__input"
            >
              <input
                class="form-check-input"
                id="street-view-toggle-:r0:"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MapPage /> Snapshot renders vehicle data 1`] = `
<DocumentFragment>
  <div
    aria-label="Search Map Page"
    class="m-map-page inherit-box border-box"
  >
    <div
      aria-label="Map Search Panel"
      class="m-map-page__input-and-results hidden"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          title="Expand"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-map-page__input"
      >
        <form
          aria-label="Search Map"
          class="m-search-form"
        >
          <div
            class="m-search-form__row"
          >
            <div
              class="m-search-form__text"
            >
              <input
                aria-label="Search Map Query"
                class="m-search-form__input"
                placeholder="Search"
                type="text"
                value=""
              />
              <button
                class="m-search-form__clear"
                title="Clear Search"
                type="reset"
              >
                <span>
                  <svg />
                </span>
              </button>
            </div>
            <button
              class="m-search-form__submit button-submit"
              disabled=""
              title="Submit"
              type="submit"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-search-form__row"
          >
            <ul
              class="m-search-form__property-buttons"
            >
              <li
                class="m-search-form__property-button"
              >
                <input
                  checked=""
                  class="m-search-form__property-input"
                  id="property-all"
                  name="property"
                  type="radio"
                  value="all"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-all"
                >
                  all
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-run"
                  name="property"
                  type="radio"
                  value="run"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-run"
                >
                  run
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-vehicle"
                  name="property"
                  type="radio"
                  value="vehicle"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-vehicle"
                >
                  vehicle
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-operator"
                  name="property"
                  type="radio"
                  value="operator"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-operator"
                >
                  operator
                </label>
              </li>
            </ul>
          </div>
        </form>
      </div>
      <hr />
      <div
        class="m-search-display"
      >
        <div
          class="m-recent-searches"
        >
          <div
            class="m-recent-searches__heading"
          >
            Recent Searches
          </div>
          <ul />
        </div>
      </div>
    </div>
    <div
      class="m-map-page__map"
    >
      <div
        class="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        class="m-vehicle-map leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="id-vehicle-map"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="/16/19831/24239.png"
                  style="width: 256px; height: 256px; left: -64px; top: -119px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-pane leaflet-primaryVehicles-pane"
              style="z-index: 499;"
            />
            <div
              class="leaflet-pane leaflet-secondaryVehicles-pane"
              style="z-index: 400;"
            />
            <div
              class="leaflet-pane leaflet-notableLocationMarkers-pane"
              style="z-index: 410;"
            >
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -57px; top: 1268px; z-index: 1268;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -57px; top: 1268px; z-index: 1268;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Albany
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -2115px; top: 3590px; z-index: 3590;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -2115px; top: 3590px; z-index: 3590;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Arborway
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: 273px; top: 1292px; z-index: 1292;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: 273px; top: 1292px; z-index: 1292;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Cabot
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -456px; top: -1747px; z-index: -1747;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -456px; top: -1747px; z-index: -1747;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Charlestown and Somerville
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -1173px; top: -3850px; z-index: -3850;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -1173px; top: -3850px; z-index: -3850;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Fellsway
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: 4158px; top: -5974px; z-index: -5974;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: 4158px; top: -5974px; z-index: -5974;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Lynn
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -3032px; top: -2293px; z-index: -2293;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -3032px; top: -2293px; z-index: -2293;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    North Cambridge
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: 2539px; top: 6363px; z-index: 6363;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: 2539px; top: 6363px; z-index: 6363;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Quincy
                  </text>
                  
				
                </svg>
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
                role="button"
                style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -65px; top: 1827px; z-index: 1827;"
                tabindex="0"
              >
                <svg />
              </div>
              <div
                class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
                role="button"
                style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -65px; top: 1827px; z-index: 1827;"
                tabindex="0"
              >
                <svg
                  height="30"
                  width="200"
                >
                  
				    
                  <text
                    y="15"
                  >
                    Southampton
                  </text>
                  
				
                </svg>
              </div>
            </div>
            <div
              class="leaflet-marker-icon m-vehicle-map__icon leaflet-zoom-hide leaflet-interactive"
              role="button"
              style="margin-left: 0px; margin-top: 0px; width: 12px; height: 12px; left: 223px; top: 0px; z-index: 1000;"
              tabindex="0"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                
        
                <path
                  class="on-time early-red selected"
                  d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                  transform="scale(1) rotate(33) translate(-12, -12)"
                />
                
      
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-vehicle-map__label primary selected leaflet-zoom-hide leaflet-interactive"
              role="button"
              style="margin-left: -20px; margin-top: 16px; width: 12px; height: 12px; left: 223px; top: 0px; z-index: 1000;"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 40 16"
                width="40"
              >
                
            
                <rect
                  class="m-vehicle-icon__label-background"
                  height="100%"
                  rx="5.5px"
                  ry="5.5px"
                  width="100%"
                />
                
            
                <text
                  class="m-vehicle-icon__label"
                  dominant-baseline="central"
                  text-anchor="middle"
                  x="50%"
                  y="50%"
                >
                  
              1
            
                </text>
                
          
              </svg>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          />
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-bar leaflet-control"
            >
              <a
                aria-label="Full Screen"
                class="leaflet-control-zoom-fullscreen fullscreen-icon"
                href="#"
                role="button"
                title="Full Screen"
              />
            </div>
            <div
              class="leaflet-control leaflet-bar m-vehicle-map__recenter-button"
            >
              
		
              <a
                aria-label="Recenter Map"
                href="#"
                role="button"
                title="Recenter Map"
              >
                
		    
                <svg
                  height="26"
                  viewBox="-5 -5 32 32"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
			
                  <path
                    d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                    transform="rotate(60, 12, 12)"
                  />
                  
		    
                </svg>
                
		
              </a>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              © 
              <a
                href="http://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
          <div
            class="leaflet-control leaflet-bar m-vehicle-map__street-view-control lc-street-view-switch"
          >
            <label
              class="lc-street-view-switch__label"
              for="street-view-toggle-:r2:"
            >
              <span
                class="lc-street-view-switch__label-icon"
              >
                <svg />
              </span>
            </label>
            <label
              class="lc-street-view-switch__label lc-street-view-switch__label-text"
              for="street-view-toggle-:r2:"
            >
              Street View
            </label>
            <div
              class="form-check form-switch lc-street-view-switch__input"
            >
              <input
                class="form-check-input"
                id="street-view-toggle-:r2:"
                role="switch"
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          class="m-map-display__selected-entity-card-container"
        >
          <div
            aria-label="Vehicle Properties Card"
            class="m-vehicle-properties-card"
          >
            <div
              class="m-vehicle-properties-card__title-bar"
            >
              <button
                aria-label="Close Vehicle Properties Card"
                class="m-close-button m-close-button--large m-close-button--light"
              >
                <span
                  aria-hidden="true"
                  aria-label=""
                  role="img"
                >
                  <svg />
                </span>
              </button>
              <output
                aria-label="Time Since Last Update Received"
                class="data-stale-time label font-xs-reg"
              >
                Updated 111 sec ago
              </output>
            </div>
            <div
              class="m-vehicle-properties-card__summary"
            >
              <div
                class="m-vehicle-route-summary"
              >
                <output
                  aria-label="Route Direction"
                  class="m-vehicle-route-direction m-vehicle-route-summary__direction label font-xs-reg"
                />
                <output
                  aria-label="Route Variant Name"
                  class="m-route-variant-name m-vehicle-route-summary__route-variant headsign font-m-semi"
                >
                  <output
                    aria-label="Route & Variant"
                    class="m-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                   
                  <output
                    aria-label="Headsign"
                    class="m-route-variant-name__headsign"
                  >
                    Forest Hills
                  </output>
                </output>
                <output
                  aria-label="Vehicle Schedule Adherence"
                  class="m-schedule-adherence on-time early-red m-vehicle-route-summary__adherence label font-xs-reg"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="m-schedule-adherence__status-icon"
                    height="8"
                    role="img"
                    viewBox="0 0 100 100"
                    width="8"
                  >
                    <circle
                      cx="50"
                      cy="50"
                      r="40"
                    />
                  </svg>
                  <output
                    class="m-schedule-adherence-status label font-xs-semi title-case"
                  >
                    on time
                  </output>
                   
                  <output
                    class="m-vehicle-adherence-label label font-xs-reg"
                  >
                    (0 min early)
                  </output>
                </output>
                <div
                  class="m-vehicle-route-summary__icon"
                >
                  <svg
                    role="img"
                    style="width: 64px; height: 64px;"
                    viewBox="-32 -20 64 64"
                  >
                    <title>
                      Vehicle Status Icon
                    </title>
                    <g
                      class="m-vehicle-icon m-vehicle-icon--large on-time early-red"
                    >
                      <rect
                        class="m-vehicle-icon__label-background"
                        height="24"
                        rx="12"
                        ry="12"
                        width="64"
                        x="-32"
                        y="19"
                      />
                      <text
                        class="m-vehicle-icon__label m-vehicle-icon__label--normal"
                        dominant-baseline="central"
                        text-anchor="middle"
                        x="0"
                        y="31"
                      >
                        1
                      </text>
                      <path
                        class="m-vehicle-icon__triangle"
                        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                        data-testid="vehicle-triangle"
                        transform="scale(1) rotate(0) translate(-24,-22)"
                      />
                      <text
                        class="m-vehicle-icon__variant"
                        dominant-baseline="alphabetic"
                        text-anchor="middle"
                        x="0"
                        y="14"
                      >
                        X
                      </text>
                    </g>
                  </svg>
                </div>
                <img
                  aria-hidden="true"
                  aria-label="presentation separator"
                  class="m-vehicle-route-summary__separator"
                  role="img presentation"
                />
              </div>
            </div>
            <div
              class="m-vehicle-properties-card__body"
            >
              <div
                class="m-vehicle-properties-card__properties m-info-section"
              >
                <table
                  class="m-vehicle-work-info"
                >
                  <tbody
                    class="m-vehicle-work-info__items"
                  >
                    <tr
                      class=""
                    >
                      <th
                        class="kv-key font-s-semi"
                        id="run:r3:"
                        scope="row"
                      >
                        run
                      </th>
                      <td
                        aria-labelledby="run:r3:"
                        class="kv-value font-s-reg"
                      >
                        run-1
                      </td>
                    </tr>
                    <tr
                      class=""
                    >
                      <th
                        class="kv-key font-s-semi"
                        id="vehicle:r4:"
                        scope="row"
                      >
                        vehicle
                      </th>
                      <td
                        aria-labelledby="vehicle:r4:"
                        class="kv-value font-s-reg"
                      >
                        v1-label
                      </td>
                    </tr>
                    <tr
                      class="fs-mask"
                    >
                      <th
                        class="kv-key font-s-semi"
                        id="operator:r5:"
                        scope="row"
                      >
                        operator
                      </th>
                      <td
                        aria-labelledby="operator:r5:"
                        class="kv-value font-s-reg fs-mask"
                      >
                        WILL SMITH #op1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="m-vehicle-properties-card__location-info m-info-section"
              >
                <div
                  class="m-current-location"
                >
                  <label
                    class="m-current-location__label label font-xs-reg title-case"
                    for="current-location-:r6:"
                  >
                    Current Location
                  </label>
                  <output
                    class="m-current-location__value label font-s-semi"
                    id="current-location-:r6:"
                  >
                    loading...
                  </output>
                </div>
                <a
                  class="m-street-view-button button-dark-small"
                  href="https://www.google.com/maps/@?api=1&map_action=pano&viewpoint=42.360718%2C-71.05891&heading=33&pitch=0&fov=80"
                  rel="noreferrer"
                  target="_blank"
                >
                  <span
                    aria-hidden="true"
                    aria-label=""
                    class="m-street-view-button__icon"
                    role="img"
                  >
                    <svg />
                  </span>
                  Street View
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
